# aigc_webserver

./: .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
server/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
server/source/: algorithm.py  models.py  routers.py
server/test_tools/: README.md  test_text2image.py  test_text2image_cli.py
src/: App.vue  main.ts
src/api/: index.ts  types.ts
src/api/modules/: image.ts  user.ts
src/assets/: main.css
src/assets/styles/: cyberpunk-theme.css
src/components/: HelloWorld.vue
src/stores/: counter.ts
src/utils/: config.ts  request.ts
src/views/: AboutView.vue  HomeView.vue
